Setter flagg UseZGC